Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2856003 by borisson_, drunken monkey: Added "index" and "path" to search
  display annotation definition.
- #2842557 by StryKaizer, Boobaa, drunken monkey, borisson_: Fixed "is rendered
  on current page" checks for Views displays with contextual filters.
- #2855157 by dbjpanda: Fixed a small CSS error.
- #2842007 by shashank.mundhra: Fixed DB comment of search_api_item.status
  column.
- #2682369 by Alumei, drunken monkey, swentel, Crell, stBorchert, prics,
  borisson_: Fixed problems with overridden config entities.
- #2645882 by drunken monkey, borisson_: Fixed "items could not be indexed"
  message for "Index now".
- #2641388 by mallezie, drunken monkey, borisson_, janusman: Added various UX
  improvements for the "Fields" tab.
- #2861587 by alexpott: Fixed the DB/Defaults integration tests.
- #2855758 by StryKaizer, drunken monkey: Fixed "is rendered" checks for Views
  block displays.
- #2855444 by drunken monkey: Added language-specific test for the "Rendered
  item" processor.
- #2794295 by isramv, drunken monkey, alan-ps: Fixed default index indexing term
  names instead of IDs.
- #2343161 by alan-ps, drunken monkey: Added per-datasource indexing stats.
- #2857017 by shkiper: Fixed copy-paste errors in js/index-active-formatters.js.
- #2311039 by drunken monkey: Fixed missing dependency injection for all form
  and plugin classes.
- #2745655 by drunken monkey: Added test for (NOT) NULL conditions on fulltext
  fields in DB backend.
- #2574889 by drunken monkey, ChristianAdamski: Added Tour module integration.
- #2814925 by kducharm, drunken monkey, Cyberwolf: Fixed indexing of computed
  fields.
- #2852807 by alan-ps: Fixed CheckStyle warnings in this project.
- #2659868 by borisson_, drunken monkey: Fixed CacheabilityTest to make sure it
  displays the rendered entities.
- #2853049 by Blanca.Esqueda: Fixed config schema error for Views date filters.