@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2856050 by StryKaizer, drunken monkey, marthinal, borisson_: Added getPath()
+  to display plugins and deprecated getUrl().
 - #2856003 by borisson_, drunken monkey: Added "index" and "path" to search
   display annotation definition.
 - #2842557 by StryKaizer, Boobaa, drunken monkey, borisson_: Fixed "is rendered
